Added Player input gestion